<resources>
    <!--APP-->
    <string name="app_name">ChatOnMe</string>
    <string name="welcome_to_chatonme">Welcome to Chat OnMe</string>
    <string name="icon">icon</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="title">Title</string>

    <!--fragment_register-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_member_login_me">Already a member! Login me</string>
    <string name="short_name_error">Name too short</string>
    <string name="email_error">Invalid email address</string>
    <string name="password_length_error">Password length too short</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="registering_user">Registering user</string>
    <string name="registered_successfully">Registered successfully</string>

    <!--fragment_login-->
    <string name="forgot_password">Forgot password</string>
    <string name="not_a_member_sign_up_now">Not a member. Sign up now</string>
    <string name="enter_email_for_password_reset">Enter email for password reset</string>
    <string name="logged_in">Logged in</string>
    <string name="request_password">Request password</string>
    <string name="cancel">Cancel</string>
    <string name="email_sent">Email sent</string>
    <string name="something_went_wrong_try_again">Something went wrong. Try again</string>
    <string name="logging_in">Logging in</string>
    <string name="sending_email">Sending email</string>


    <!--fragment_profile-->
    <string name="sign_out_of_app">Sign out of app</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="presentation">Presentation</string>
    <string name="edit_profile">Edit profile</string>
    <string name="select_picture">Select picture</string>
    <string name="image_added_successfully">Image added successfully</string>


    <!--fragment_users_list-->
    <string name="choose_action">Choose action</string>
    <string name="search_mate">Search mate</string>


    <!--fragment_profile-->
    <string name="chat_with_your_friends">Chat with your friends!</string>


    <!--fragment_user_information_profile-->
    <string name="update_account_details">Update account details</string>
    <string name="profile_information">Profile information</string>
    <string name="change_email">Change email</string>
    <string name="update">Update</string>
    <string name="new_email">New email</string>
    <string name="update_your_email">Update your email</string>
    <string name="failed_to_update_email">Failed to update email</string>
    <string name="email_updated_successfully">Email updated successfully</string>
    <string name="updating_information">Updating information</string>
    <string name="information_updated_successfully">Information updated successfully</string>
    <string name="presentation_length_error">Presentation too short</string>
    <string name="age_error">Not old enough</string>
    <string name="country_error">Country name too short</string>


    <!--fragment_chat-->
    <string name="type_a_message">Type a message…</string>
    <string name="example_message">This is example message created by me</string>
    <string name="message_cannot_be_empty">Message cannot be empty</string>
    <string name="example_date">21 Dec</string>

    <!--fragment_add_post-->
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="post">Post</string>
    <string name="create_post">Create post</string>
    <string name="title_post_error">Title too short</string>
    <string name="description_post_error">Description too short</string>
    <string name="uploading_post">Uploading post…</string>
    <string name="posted_successfully">Posted successfully </string>



    <!--post_item-->
    <string name="author_name">Author name</string>
    <string name="post_date">00 Jun 2020 5:21 PM</string>
    <string name="post_title">Post title</string>
    <string name="post_description">Post description</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>





</resources>
