<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">


        <ImageView
            android:id="@+id/authorImageView"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_account_circle_grey"
            app:layout_constraintEnd_toStartOf="@+id/postDataLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/postDataLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="7dp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@+id/authorImageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/authorNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textSize="@dimen/medium_font"
                android:textStyle="bold"
                android:textColor="@color/textColorBlack"/>

            <TextView
                android:id="@+id/postTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_date"
                android:textSize="14sp"
                android:textColor="@color/textColorBlack"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/postDetailsLinearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/authorImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/postDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_description"
                android:textSize="@dimen/medium_font"
                android:textStyle="normal"
                android:textColor="@color/textColorBlack"/>

        </LinearLayout>

        <View
            android:id="@+id/socialSectionLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postDetailsLinearLayout"/>

        <LinearLayout
            android:id="@+id/interactLinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/postDetailsLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/likePostBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/like"
                android:drawableStart="@drawable/ic_like"
                android:paddingStart="20dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="false"
                android:layout_weight="1"
                tools:ignore="ButtonStyle,RtlSymmetry" />

            <Button
                android:id="@+id/commentPostBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/comment"
                android:drawableStart="@drawable/ic_comment"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="false"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/sharePostBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/share"
                android:drawableStart="@drawable/ic_share"
                android:paddingEnd="20dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="false"
                android:layout_weight="1"
                tools:ignore="ButtonStyle,RtlSymmetry" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>