<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.home.ProfileFragment"
        android:background="@color/primaryLightColor">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_account_circle"
            android:contentDescription="@string/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayPresentationTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:maxLength="50"
            android:gravity="center"
            android:text="@string/presentation"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/textColorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayPresentationTv">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="4dip"
                    android:text="@string/age"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textColorWhite" />

                <TextView
                    android:id="@+id/displayAgeTv"
                    android:gravity="end"
                    android:padding="4dip"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textColorWhite" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="4dip"
                    android:text="@string/country"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textColorWhite" />

                <TextView
                    android:id="@+id/displayCountryTv"
                    android:gravity="end"
                    android:padding="4dip"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textColorWhite" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="4dip"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textColorWhite" />

                <TextView
                    android:id="@+id/displayEmailTv"
                    android:gravity="end"
                    android:padding="4dip"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textColorWhite" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:background="@null"
            android:textSize="@dimen/medium_font"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_edit"
            android:drawablePadding="4dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tableLayout">
        </Button>

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/primaryDarkColor"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_out_of_app"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/medium_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>