<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        tools:context=".views.other.MainFragment">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welcomeTextView" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_chatonme"
            android:textSize="@dimen/big_font"
            android:textColor="@color/textColorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/primaryWhiteColor"
            android:text="@string/login"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/medium_font"
            android:textAllCaps="false"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/registerBtn"
            app:layout_constraintHorizontal_bias="0.5"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/register"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/medium_font"
            android:textAllCaps="false"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/loginBtn"
            app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
